<resources>
    <string name="app_name">ToDoList</string>
    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_activity_category">Categories</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings">Log out</string>
    <!-- Strings related to category -->
    <string name="add" translatable="false">+</string>
    <!-- Strings related to mainActivity -->
    <string name="enter_task">Enter task</string>
    <string name="enter_category">Enter category</string>
    <string name="enter_task_date">Enter date</string>
    <string name="enter_task_time">Enter time</string>
    <string name="enter_task_datetime">Enter date and time</string>
    <string name="OK" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_main_and_navigation" translatable="false">MainAndNavigation</string>
    <string name="nav_header_title" translatable="false">ToDoList</string>
    <string name="nav_header_subtitle">Your personal time manager</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="expired">Expired</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="later">Later</string>
    <!-- Strings related to mainAndNavigationDrawer -->
    <string name="all_tasks">All tasks</string>
    <string name="categories">Categories</string>
    <string name="change">Change</string>
    <string name="add_category">Add</string>
    <string name="language">Language</string>
    <string name="english" translatable="false">ENG</string>
    <string name="russian" translatable="false">RU</string>
    <string name="no_category">No category</string>
    <string name="no_category_in_db">No category</string>
    <string name="todolist" translatable="false">ToDoList</string>
    <string name="notification_title">Click here to view your ToDoList…</string>
    <string name="map">Map</string>

    <!-- Strings related to EmailPasswordActivity -->
    <!-- Strings related to ChangeActivity -->
    <string name="registration">Sign up</string>
    <string name="title_change">Change list of categories</string>
    <string name="reg_success">Successfull registration</string>
    <string name="reg_fail">Registration failed</string>
    <string name="log_in_successfull">Authorization successfull</string>
    <string name="log_in_failed">Autorization failed</string>
</resources>
